# arts

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: latex.yml
docker/: Dockerfile  build.sh  run.bat  run.sh
include/arts/: CGALTypes.hpp  Environment.hpp  Object.hpp  Path.hpp  PathSampler.hpp  RayTracer.hpp  Receiver.hpp  Simulation.hpp  Source.hpp
include/arts/estimator/: LocationEstimator.hpp
rsc/: README
src/: Environment.cpp  Main.cpp  Object.cpp  Path.cpp  PathSampler.cpp  RayTracer.cpp  Receiver.cpp  Simulation.cpp  Source.cpp
src/estimator/: LocationEstimator.cpp
test/: TestLOSEstimator.cpp  TestTube.cpp  TestWallEstimator.cpp
thesis/: setup.tex  thesis_main.tex
thesis/alg/: algRayTracer.tex
thesis/bib/: general.bib  localization.bib  mapping.bib  ray_tracing.bib  web.bib
thesis/chapters/: 0_0-titlepage_en.tex  0_1-declaration.tex  0_2-abstract.tex  1-introduction.tex  2-relatedwork.tex  3-background.tex  4-approach.tex  5-experiments.tex  6-conclusions.tex  7-acknowledgments.tex
thesis/figures/: figTemplate.tex
thesis/figures/approach/: figCollision.tex  figEstimator.tex  figEvaluator.tex  figFov.tex  figGraph.tex  figHigherOrder.tex  figModelParser.tex  figObstacles.tex  figOverview.tex  figPathSampler.tex  figRayTracer.tex  figReflection.tex  figSourceReceiver.tex  figSpecularReflection.tex
thesis/figures/background/: algPathTracing.tex  figSpherical.tex
thesis/figures/experiments/: figDelta.tex  figHouse.tex  figMatryoshka4.tex  figRIR.tex  figReferenceRoom.tex  figTube100.tex
thesis/figures/introduction/: figIntro.tex
thesis/tables/: tabMatryoshka.tex  tabTube.tex
tools/: ildars.py  location_estimator.py  matryoshka_cube.py  plot_loss.py  plot_samples.py
